# snake

./: .gitignore  CMakeLists.txt  README.md
include/snake/core/: apple.h  board.h  game_state.h  snake.h
include/snake/util/: kb_io.h  movement.h
src/snake/: main.cc
src/snake/core/: apple.cc  board.cc  game_state.cc  snake.cc
src/snake/util/: kb_io.cc  movement.cc
